# thinkube-control

./: .gitignore  AUTHENTICATION.md  CLAUDE.md  README.md  ansible.cfg  copier.yaml  package-lock.json  test-webhook-1750800030.txt  test_manifest_generation.py  test_sd_deployment.yaml
.claude/: settings.json
backend/: .env.test  Dockerfile  requirements.txt  run_tests.sh  start.sh
backend/fastapi-mcp-extended/: README.md  pyproject.toml  setup.py
backend/fastapi-mcp-extended/fastapi_mcp_extended/: __init__.py  classifier.py  prompts.py  resources.py  server.py  types.py
docs/: antora.yml
frontend/: .eslintrc.cjs  Dockerfile  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  vite.config.ts
k8s/: backend-deployment.yaml.jinja  backend-service.yaml.jinja  backend-traffic-policy.yaml.jinja  build-workflow.yaml.jinja  buildah-storage-config.yaml.jinja  cache-warmer-cron.yaml.jinja  cicd-pipeline-template.yaml.jinja  cicd-stage-template.yaml.jinja  deployment-hook.yaml.jinja  frontend-deployment.yaml.jinja  ingress.yaml.jinja  inventory-configmap.yaml.jinja  kaniko-warmer.yaml.jinja  keycloak-setup.yaml.jinja  kustomization.yaml.jinja  llm-proxy-deployment.yaml.jinja  llm-proxy-httproute.yaml.jinja  llm-proxy-service.yaml.jinja  llm-proxy-traffic-policy.yaml.jinja  node-metrics-daemonset.yaml.jinja  rbac.yaml.jinja
playbooks/: deploy-application.yaml  mirror-image.yaml
proxy/: Dockerfile  go.mod  go.sum
scripts/: check_deployment_logs.py  deploy_application.py  thinkube_yaml_validator.py
tasks/: create_gitea_repo.yaml  generate_k8s_manifests.yaml  inject_secrets.yaml  push_to_gitea.yaml  setup_git_hooks.yaml
(+304 files in other folders)
